--- a/src/assets/css/Footer.scss
+++ b/src/assets/css/Footer.scss
@@ -7,6 +7,20 @@ footer {
       height: 80px;
       padding: 20px 0;
       font-size: 16px;
+      .avatar {
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 10px;
+        margin-top: -4px;
+        width: 36px;
+        height: 36px;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          display: block;
+        }
+      }
       .item {
         height: 40px;
         line-height: 40px;
