--- a/src/assets/css/Comment.scss
+++ b/src/assets/css/Comment.scss
@@ -108,3 +108,129 @@
     }
   }
 }
+
+.comments-wrap {
+  .comment-item {
+    border-bottom: 1px solid;
+    border-color: #f0f0f0;
+
+    padding-top: 15px;
+    .user-avatar {
+      float: left;
+      margin-right: 10px;
+      img {
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+      }
+    }
+    .main {
+      overflow: hidden;
+      .comment-user {
+        margin-bottom: 6px;
+        .nickname-wrap {
+          overflow: hidden;
+          .nickname {
+            font-size: 16px;
+            font-weight: 700;
+            vertical-align: middle;
+            color: #484848;
+          }
+          .oneline {
+            overflow: hidden;
+            -o-text-overflow: ellipsis;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+          img {
+            width: 18px;
+            height: 18px;
+            vertical-align: middle;
+            margin-left: 5px;
+          }
+        }
+      }
+      .comment-content {
+        font-size: 16px;
+        line-height: 1.7;
+        padding-right: 18px;
+        color: #484848;
+
+        word-break: break-word !important;
+        word-break: break-all;
+      }
+      .comment-extra {
+        font-size: 12px;
+        height: 20px;
+        line-height: 20px;
+        color: #b1b1b1;
+        margin-top: 5px;
+        margin-bottom: 15px;
+      }
+      .sub-comment-list {
+        .sub-comment-item {
+          padding: 15px 0;
+          border-top: 1px solid;
+          font-size: 14px;
+          color: #484848;
+          border-color: #e6e6e6;
+          .user-avatar {
+            float: left;
+            margin-right: 8px;
+            img {
+              width: 22px;
+              height: 22px;
+              border-radius: 50%;
+            }
+          }
+          .sub-comment-wrap {
+            overflow: hidden;
+            padding-right: 18px;
+
+            overflow: hidden;
+            padding-right: 18px;
+
+            .nickname {
+              font-size: 16px;
+              font-weight: 700;
+              vertical-align: middle;
+              color: #484848;
+            }
+            .sub-comment-text {
+              font-size: 15px;
+              a {
+                color: #3194d0;
+              }
+            }
+            .sub-comment-extra {
+              padding-top: 5px;
+              font-size: 12px;
+              color: #b1b1b1;
+              .reply-btn {
+                padding-left: 6px;
+                font-size: 13px;
+                color: #b1b1b1;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .comment-open-app-btn-wrap {
+    text-align: center;
+    padding-bottom: 20px;
+    margin-top: 20px;
+    .comment-open-app-btn {
+      border: 2px solid #ea6f5a;
+      color: #ea6f5a;
+      background-color: transparent;
+      border-radius: 4px;
+      text-align: center;
+      width: 250px;
+      height: 45px;
+      padding: 10px 30px;
+      font-size: 16px;
+    }
+  }
+}
