--- a/src/assets/css/ArticleBody.scss
+++ b/src/assets/css/ArticleBody.scss
@@ -72,6 +72,61 @@
       }
     }
     .article-content {
+      .image-package {
+        margin: 0 0 25px;
+        text-align: center;
+        .image-container {
+          z-index: 1;
+          position: relative;
+          -webkit-transition: background-color 0.1s linear;
+          -o-transition: background-color 0.1s linear;
+          transition: background-color 0.1s linear;
+          margin: 0 auto;
+          background-color: #eee;
+
+          max-width: 700px;
+          max-height: 504px;
+          background-color: transparent;
+          .image-container-fill {
+            z-index: 50;
+          }
+          .image-view {
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            img {
+              -webkit-transition: all 0.15s linear;
+              -o-transition: all 0.15s linear;
+              transition: all 0.15s linear;
+              z-index: 1;
+              opacity: 1;
+
+              max-width: 100%;
+              height: auto;
+              vertical-align: middle;
+              border: 0;
+              -webkit-transition: all 0.25s ease-in-out;
+              -o-transition: all 0.25s ease-in-out;
+              transition: all 0.25s ease-in-out;
+            }
+          }
+        }
+        .image-caption {
+          min-width: 20%;
+          max-width: 80%;
+          min-height: 22px;
+          display: inline-block;
+          padding: 10px 10px 6px;
+          margin: 0 auto;
+          border-bottom: 1px solid;
+          color: #969696;
+          font-size: 14px;
+          line-height: 1.7;
+          border-color: #d9d9d9;
+        }
+      }
     }
     .article-copyright {
       font-size: 13px;
@@ -101,6 +156,15 @@
         font-weight: 400;
         line-height: 1.7;
         color: #2f2f2f;
+
+        display: inline-block;
+        margin: 0 auto;
+        position: relative;
+        z-index: 1;
+        font-size: 14px;
+        line-height: 31px;
+        padding: 0 10px;
+        background-color: #fff;
         span {
           display: inline-block;
           vertical-align: middle;
