--- a/src/assets/css/Collection.scss
+++ b/src/assets/css/Collection.scss
@@ -29,7 +29,7 @@
         color: #969696;
         line-height: 1.3;
         a {
-            color: #3194d0;
+          color: #3194d0;
         }
       }
       .intro {
@@ -54,6 +54,96 @@
         background-color: #42c02e;
         border: 1px solid #42c02e;
         color: #fff;
+      }
+    }
+    .user-follow-tip {
+      position: relative;
+      background-color: #fff;
+      padding-top: 15px;
+      &:before {
+        content: '';
+        position: absolute;
+        display: inline-block;
+        top: 0;
+        left: 50%;
+        border: 15px solid transparent;
+        border-top: none;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+
+        margin-left: 50px;
+
+        border-bottom-color: #ddd;
+      }
+      .wording {
+        padding: 12px 0 15px;
+        margin: auto -18px;
+        border-top: 1px solid;
+        text-align: center;
+        border-color: #ddd;
+        img {
+          margin-left: -10px;
+          width: 44px;
+          vertical-align: middle;
+        }
+        p {
+          display: inline-block;
+          padding: 10px 0 0 8px;
+          font-size: 15px;
+          text-align: left;
+          vertical-align: middle;
+          color: #333;
+        }
+        .close {
+          position: absolute;
+          top: 30px;
+          right: 18px;
+          padding: 0 10px;
+          font-size: 24px;
+          font-weight: 200;
+          color: #999;
+        }
+      }
+      .option {
+        padding-bottom: 20px;
+        margin: auto -6px;
+        text-align: center;
+        .btn {
+          display: inline-block;
+          padding: 6px 0;
+          min-width: 120px;
+          font-size: 16px;
+          border: 1px solid;
+          border-radius: 4px;
+          height: 40px;
+          width: 48%;
+          margin: 0 1%;
+          border-color: #d5d5d5;
+          color: #333;
+        }
+        .btn-green {
+          color: #fff;
+          border: none;
+          background-color: #42c02e;
+        }
+      }
+      &:after {
+        content: '';
+        position: absolute;
+        display: inline-block;
+        top: 0;
+        left: 50%;
+        border: 15px solid transparent;
+        border-top: none;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+
+        top: 2px;
+        border-bottom-color: #fff;
+
+        margin-left: 50px;
       }
     }
   }
