--- a/src/assets/css/Download.scss
+++ b/src/assets/css/Download.scss
@@ -1,37 +1,37 @@
 /**/
 
 .download-guide {
-  position: relative;
-  background-color: transparent;
-  height: 230px;
-  &:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
+  // position: relative;
+  // background-color: transparent;
+  // height: 230px;
+  // &:before {
+  //   content: '';
+  //   position: absolute;
+  //   left: 0;
+  //   right: 0;
+  //   bottom: 0;
 
-    background-image: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), to(#fff));
-    background-image: -webkit-linear-gradient(bottom, hsla(0, 0%, 100%, 0), #fff);
-    background-image: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0), #fff);
-    background-image: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff);
-    top: 10px;
-  }
-  &:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
+  //   background-image: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), to(#fff));
+  //   background-image: -webkit-linear-gradient(bottom, hsla(0, 0%, 100%, 0), #fff);
+  //   background-image: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0), #fff);
+  //   background-image: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff);
+  //   top: 10px;
+  // }
+  // &:after {
+  //   content: '';
+  //   position: absolute;
+  //   left: 0;
+  //   right: 0;
+  //   bottom: 0;
 
-    top: 0;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    -webkit-background-size: contain;
-    background-size: contain;
-    background-image: url(//cdn2.jianshu.io/asimov/src/assets/image/download-guide.1cef6fa3.png);
-    z-index: -1;
-  }
+  //   top: 0;
+  //   background-repeat: no-repeat;
+  //   background-position: bottom;
+  //   -webkit-background-size: contain;
+  //   background-size: contain;
+  //   background-image: url(//cdn2.jianshu.io/asimov/src/assets/image/download-guide.1cef6fa3.png);
+  //   z-index: -1;
+  // }
   .download {
     display: block;
     position: absolute;
