--- a/src/assets/css/Directory.scss
+++ b/src/assets/css/Directory.scss
@@ -104,6 +104,27 @@
   line-height: 1.5;
   color: #333;
 }
+//标签
+.categories-group {
+  padding: 0 18px;
+  margin-top: -10px;
+  padding-bottom: 18px;
+  i {
+    margin-right: 5px;
+    vertical-align: middle;
+    font-size: 18px;
+    color: #eee;
+  }
+  .category {
+    display: inline-block;
+    margin: 0 6px 6px 0;
+    padding: 6px 14px;
+    font-size: 12px;
+    border-radius: 15px;
+    color: #333;
+    background-color: #f5f5f5;
+  }
+}
 
 .latest-novel-note {
   display: block;
@@ -169,6 +190,7 @@
     .chapter {
       position: relative;
       padding: 18px 0;
+
       .part {
         height: 100%;
         width: 30px;
@@ -180,6 +202,9 @@
       .content {
         overflow: hidden;
         display: block;
+        &.padding-right {
+          padding-right: 60px;
+        }
         .info {
           display: block;
           overflow: hidden;
@@ -209,6 +234,32 @@
             vertical-align: middle;
           }
         }
+      }
+      .buy-note {
+        background-color: #da9e55;
+        color: #fff;
+        position: absolute;
+        right: 0;
+        top: 19px;
+        display: block;
+        width: 44px;
+        height: 24px;
+        border-radius: 12px;
+        font-size: 12px;
+        text-align: center;
+        line-height: 24px;
+      }
+      .try-read {
+        float: right;
+        background-color: rgba(218, 158, 85, 0.1);
+        color: #da9e55;
+        display: block;
+        width: 44px;
+        height: 24px;
+        border-radius: 12px;
+        font-size: 12px;
+        text-align: center;
+        line-height: 24px;
       }
     }
   }
@@ -316,10 +367,124 @@
       width: calc(50% - 10px);
       &:last-child {
         margin-left: 15px;
-    }
+      }
       img {
         width: 100%;
       }
+    }
+  }
+}
+//购买按钮
+.paid-fixed-bar {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #fff;
+  -webkit-box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  padding: 8px 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-bottom: -webkit-calc(8px + env(safe-area-inset-bottom));
+  padding-bottom: calc(8px + env(safe-area-inset-bottom));
+  padding-bottom: -webkit-calc(8px + constant(safe-area-inset-bottom));
+  padding-bottom: calc(8px + constant(safe-area-inset-bottom));
+  .try-read {
+    border: 1px solid #da9e55;
+    background-color: rgba(218, 158, 85, 0.1);
+    color: #da9e55;
+    width: 37%;
+    float: left;
+  }
+  a {
+    height: 100%;
+    font-size: 17px;
+    text-align: center;
+    border-radius: 4px;
+    display: block;
+    line-height: 49px;
+  }
+  .reward-button {
+    border: 1px solid #da9e55;
+    background-color: #da9e55;
+    color: #fff;
+    width: 60%;
+    float: right;
+  }
+  button {
+    height: 100%;
+    font-size: 17px;
+    text-align: center;
+    border-radius: 4px;
+    display: block;
+    line-height: 49px;
+    // 立即拿下对话框
+    // .el-dialog__wrapper {
+    //   position: fixed;
+    //   top: 0;
+    //   right: 0;
+    //   bottom: 0;
+    //   left: 0;
+    //   overflow: auto;
+    //   margin: 0;
+    //   .el-dialog {
+    //     position: relative;
+    //     margin: 0 auto 50px;
+    //     background: #fff;
+    //     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    //     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    //     -webkit-box-sizing: border-box;
+    //     -moz-box-sizing: border-box;
+    //     box-sizing: border-box;
+    //     margin-top: 15vh;
+    //     width: 322px;
+    //   }
+    //   .buy-confirm-modal-1biVE_0 {
+    //     -webkit-box-shadow: none !important;
+    //     box-shadow: none !important;
+    //     border: none !important;
+    //     border-radius: 5px !important;
+    //   }
+    //   .el-dialog {
+    //     overflow: hidden;
+    //   }
+    // }
+  }
+  .tip {
+    position: absolute;
+    bottom: 66px;
+    bottom: -webkit-calc(66px + env(safe-area-inset-bottom));
+    bottom: calc(66px + env(safe-area-inset-bottom));
+    bottom: -webkit-calc(66px + constant(safe-area-inset-bottom));
+    bottom: calc(66px + constant(safe-area-inset-bottom));
+    right: 30%;
+    margin-right: -60px;
+    padding: 10px;
+    -webkit-box-shadow: 0 1px 6px 0 #ddd;
+    box-shadow: 0 1px 6px 0 #ddd;
+    border-radius: 4px;
+    text-align: center;
+    line-height: 18px;
+    background-color: #fff;
+    color: #666;
+    font-size: 14px;
+    font-weight: 400;
+    &:before {
+      content: '';
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+      left: 50%;
+      bottom: -8px;
+      margin-left: -5px;
+      -webkit-box-shadow: 1px 1px 1px -1px rgba(0, 0, 0, 0.1);
+      box-shadow: 1px 1px 1px -1px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
     }
   }
 }
