--- a/src/assets/css/Directory.scss
+++ b/src/assets/css/Directory.scss
@@ -562,6 +562,7 @@ button {
       .ic-wechat-pay {
         color: #00bb29;
         font-size: 16px;
+        margin-right: 5px;
       }
       .ic-link-33FYA_0 {
         color: rgba(0, 0, 0, 0.4);
