--- a/src/assets/css/Home.scss
+++ b/src/assets/css/Home.scss
@@ -1,6 +1,6 @@
-/*----------*/
+/*----------home.scss这样浏览器调试就可以知道时哪个文件的样式*/
 hr {
   border-width: 0;
-  height: 10px;
+  height: 10px !important;
   background-color: #e0e0e0;
 }
