--- a/src/assets/css/ArticleBody.scss
+++ b/src/assets/css/ArticleBody.scss
@@ -10,21 +10,21 @@
     padding-right: 18px;
     margin-left: -18px;
     margin-right: -18px;
-}
+  }
   .article-body {
     &:after {
-      content: "";
+      content: '';
       position: absolute;
       left: 0;
       bottom: -1px;
       width: 100%;
       height: 100px;
-      background-image: -webkit-gradient(linear,left bottom,left top,from(#fff),to(hsla(0,0%,100%,0)));
-      background-image: -webkit-linear-gradient(bottom,#fff,hsla(0,0%,100%,0));
-      background-image: -o-linear-gradient(bottom,#fff,hsla(0,0%,100%,0));
-      background-image: linear-gradient(0deg,#fff,hsla(0,0%,100%,0));
+      background-image: -webkit-gradient(linear, left bottom, left top, from(#fff), to(hsla(0, 0%, 100%, 0)));
+      background-image: -webkit-linear-gradient(bottom, #fff, hsla(0, 0%, 100%, 0));
+      background-image: -o-linear-gradient(bottom, #fff, hsla(0, 0%, 100%, 0));
+      background-image: linear-gradient(0deg, #fff, hsla(0, 0%, 100%, 0));
       z-index: 1;
-  }
+    }
     .article-title {
       margin: 15px 0;
       font-size: 30px;
@@ -166,24 +166,23 @@
       padding-top: 20px;
       padding-bottom: 10px;
       margin-top: 5px;
-      i{
-        font-size:30px;
+      i {
+        font-size: 30px;
       }
-
+    }
+    .open-app-btn {
+      margin-top: 15px;
+      margin-bottom: 25px;
+      background-color: #ea6f5a;
+      color: #fff;
+      text-align: center;
+      width: 240px;
+      height: 45px;
+      padding: 10px 30px;
+      font-size: 16px;
+      border-radius: 23px;
+    }
   }
-  .open-app-btn {
-    margin-top: 15px;
-    margin-bottom: 25px;
-    background-color: #ea6f5a;
-    color: #fff;
-    text-align: center;
-    width: 240px;
-    height: 45px;
-    padding: 10px 30px;
-    font-size: 16px;
-    border-radius: 23px;
-}
-}
   .article-praise-container {
     margin: 15px 0 26px;
     text-align: center;
@@ -298,4 +297,129 @@
       }
     }
   }
+}
+
+/* 上/下一章 */
+.book-chapter {
+  margin: 50px 0 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  height: 82px;
+  border: 1px solid;
+  font-size: 0;
+  position: relative;
+  background-color: #f5f5f5;
+  border-color: #e5e5e5;
+  .half {
+    width: 50%;
+  }
+  .chapter-item {
+    display: inline-block;
+
+    height: 100%;
+    position: relative;
+    .text {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      width: 100%;
+      p {
+        font-size: 16px;
+        text-align: center;
+        color: #333;
+      }
+    }
+    span {
+      margin-top: 5px;
+      padding: 0 10px;
+      font-size: 12px;
+      color: #999;
+      text-align: center;
+      overflow: hidden;
+      -o-text-overflow: ellipsis;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      line-height: 15px;
+      max-height: 30px;
+      -webkit-box-sizing: content-box;
+      -moz-box-sizing: content-box;
+      box-sizing: content-box;
+      white-space: normal;
+    }
+  }
+  .chapter-with-next {
+    &:after {
+      content: '';
+      position: absolute;
+      width: 1px;
+      height: 100%;
+      right: 0;
+      top: 0;
+      background-color: #e5e5e5;
+    }
+  }
+}
+/* 购买 */
+#buy-book-panel {
+  .support-author {
+    padding: 20px 0;
+    text-align: center;
+    clear: both;
+    position: relative;
+    .buy-book {
+      color: #fff;
+      background-color: #da9e55;
+      width: 250px;
+      border-radius: 4px !important;
+    }
+    .btn-paid {
+      margin-bottom: 17px;
+      padding: 8px 48px;
+      font-size: 14px;
+      display: inline-block;
+      height: 40px;
+    }
+    .supporter {
+      line-height: 0;
+      text-align: center;
+      span {
+        display: inline-block;
+        padding: 8px;
+        margin-top: 2px;
+        margin-bottom: 12px;
+        font-size: 14px;
+        color: #646464;
+      }
+      .support-list {
+        margin: 0;
+        padding: 0;
+        max-width: 284px;
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+      }
+    }
+  }
+}
+button {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  text-align: center;
+  border: none;
+  background-color: transparent;
+  cursor: default;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  text-transform: none;
+  overflow: visible;
+  line-height: 1.15;
+  margin: 0;
+  font-family: sans-serif;
 }
