--- a/src/assets/css/ArticleBody.scss
+++ b/src/assets/css/ArticleBody.scss
@@ -243,9 +243,9 @@
     }
   }
   .article-reward {
-    height: 66px;
-    display: flex;
-    background-color: #ececec;
+    // height: 66px;
+    // display: flex;
+    background-color: #fafafa;
     margin-bottom: 20px;
     .reward-description {
       width: 100%;
@@ -294,6 +294,59 @@
         border: none;
         line-height: 36px;
         margin-left: 5px;
+      }
+    }
+    //赞赏网友的详细信息
+    .support-users {
+      padding: 12px 0;
+      margin: 0 10px;
+      border-top: 1px solid;
+      border-color: #eee;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      ul {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        margin-right: 10px;
+        li {
+          float: left;
+          display: inline-block;
+          &:not(:first-child) {
+            margin-left: -8px;
+          }
+          img {
+            display: block;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            border: 2px solid;
+            border-color: #fff;
+          }
+          .more {
+            width: 24px;
+            height: 24px;
+            border: 2px solid;
+            border-color: #fff;
+            font-size: 16px;
+            text-align: center;
+            color: #fff;
+            line-height: 21px;
+            border-radius: 50%;
+            background-color: #ddd;
+        }
+        }
+      }
+    }
+    .reward-text {
+      font-size: 13px;
+      line-height: 24px;
+      color: #666;
+      .reward-num {
+        color: #ea6f5a;
       }
     }
   }
@@ -600,4 +653,8 @@ button {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
+}
+img {
+  max-width: 100%;
+  border-style: none;
 }
