--- a/src/assets/css/SpecialOffer.scss
+++ b/src/assets/css/SpecialOffer.scss
@@ -1,74 +1,27 @@
-.books-trending {
+#bargain-books {
+  font-size: 0;
   .banner {
     width: 100%;
-    height: 110px;
+    height: 120px;
     background-position: 50%;
     -webkit-background-size: 440px 440px;
     background-size: 440px;
     background-repeat: no-repeat;
+    background-color: #dd4b39;
+    background-image: url(//cdn2.jianshu.io/asimov/src/assets/image/mobile/img_book_bargain_books.f4faba07.png);
   }
-  .banner.weekly {
-    background-color: #fa5e5b;
-    background-image: url(//cdn2.jianshu.io/asimov/src/assets/image/img_book_weekly_trending.33aea5ef.png);
-  }
-  ol {
+  .bargain-books-list {
     position: relative;
     margin: 0 auto;
-    padding: 10px 0 20px;
+    padding: 10px 0 60px;
     max-width: 560px;
     list-style: none;
-    counter-reset: li;
     li {
-      &:first-of-type .notebook:before {
-        color: rgba(218, 158, 85, 0.15);
-        font-size: 90px;
-      }
-      &:nth-of-type(2) .notebook:before {
-        color: rgba(159, 173, 199, 0.15);
-        font-size: 90px;
-      }
-      &:nth-of-type(3) {
-        .notebook:before {
-          color: hsla(32, 31%, 69%, 0.15) !important;
-          font-size: 90px !important;
-        }
-      }
-      .notebook {
+      .book {
         display: block;
         position: relative;
-        padding: 15px;
-        height: 110px;
-        overflow: hidden;
-        &:before {
-          content: counter(li);
-          counter-increment: li;
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          font-size: 32px;
-          font-style: italic;
-          font-weight: 700;
-          line-height: 1;
-          color: hsla(0,0%,59%,.15);
-        }
-        &:after {
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 90px;
-          width: 200%;
-          height: 1px;
-          border-bottom: 1px solid #eaeaea;
-          -webkit-transform: scale(0.5);
-          -ms-transform: scale(0.5);
-          transform: scale(0.5);
-          -webkit-transform-origin: 0 0;
-          -ms-transform-origin: 0 0;
-          transform-origin: 0 0;
-          -webkit-box-sizing: border-box;
-          -moz-box-sizing: border-box;
-          box-sizing: border-box;
-        }
+        padding: 25px 15px;
+        height: 130px;
         .cover {
           margin-right: 15px;
           float: left;
@@ -77,47 +30,38 @@
           border-radius: 4px;
           border: 1px solid #eaeaea;
         }
+        .btn {
+          float: right;
+          margin-left: 15px;
+          height: 30px;
+          width: 70px;
+          line-height: 30px;
+          padding-left: 5px;
+          text-align: center;
+          font-size: 13px;
+          border-radius: 3px;
+          background-color: #f48f18;
+          color: #fff;
+        }
         .name {
-          color: #999;
           font-size: 16px;
           font-weight: 700;
           line-height: 1.3;
+          color: #333;
           overflow: hidden;
           -o-text-overflow: ellipsis;
           text-overflow: ellipsis;
           white-space: nowrap;
         }
         .intro {
+          margin-top: 7px;
           font-size: 12px;
           line-height: 1.3;
           color: #999;
-        }
-        .oneline {
           overflow: hidden;
           -o-text-overflow: ellipsis;
           text-overflow: ellipsis;
           white-space: nowrap;
-        }
-        .intro.twoline {
-          overflow: hidden;
-          -o-text-overflow: ellipsis;
-          text-overflow: ellipsis;
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-          line-height: 16px;
-          max-height: 32px;
-          -webkit-box-sizing: content-box;
-          -moz-box-sizing: content-box;
-          box-sizing: content-box;
-          white-space: normal;
-      }
-        .info {
-          color: #999;
-          margin-right: 7px;
-          font-size: 12px;
-          line-height: 2.3;
-
           i {
             color: #d8d8d8;
           }
@@ -125,7 +69,42 @@
             content: ' \B7';
           }
         }
+        .price {
+          margin-top: 8px;
+          .retail-price {
+            color: #dd4b39;
+            font-size: 25px;
+            &:before {
+              content: '\FFE5';
+              margin-right: -4px;
+              font-size: 14px;
+              vertical-align: text-top;
+            }
+          }
+          .original-price {
+            font-size: 12px;
+            color: #999;
+            text-decoration: line-through;
+            &:before {
+              content: '\FFE5';
+              margin-right: -2px;
+            }
+          }
+        }
+        .subscribers {
+          position: absolute;
+          bottom: 25px;
+          right: 15px;
+          font-size: 12px;
+          color: #999;
+          line-height: 1;
+        }
       }
     }
   }
+}
+img {
+  max-width: 100%;
+
+  border-style: none;
 }
