--- a/src/assets/css/view/Home.scss
+++ b/src/assets/css/view/Home.scss
@@ -1,4 +1,4 @@
-/*----------home.scss这样浏览器调试就可以知道时哪个文件的样式*/
+/* Home.scss这样浏览器调试就可以知道时哪个文件的样式*/
 hr {
   border-width: 0;
   height: 10px !important;
