--- a/src/assets/css/components/ArticleBody.scss
+++ b/src/assets/css/components/ArticleBody.scss
@@ -171,8 +171,7 @@
       }
     }
     .open-app-btn {
-      margin-top: 15px;
-      margin-bottom: 25px;
+      margin:15px auto 25px auto;
       background-color: #ea6f5a;
       color: #fff;
       text-align: center;
