--- a/src/assets/css/view/AdmirePay.scss
+++ b/src/assets/css/view/AdmirePay.scss
@@ -3,6 +3,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0 20px;
+  line-height: 1.6;
   .info {
     margin: 30px 0;
     text-align: center;
@@ -45,23 +46,36 @@
         vertical-align: middle;
         color: #333;
       }
-      .ic-selected {
-        display: block;
+      .design-radio{
         float: right;
-        font-size: 24px;
-        line-height: 42px;
-        color: #fff;
-        &:before {
-          content: '\E69E';
-        }
-        &.on {
-          color: #ea6f5a !important;
-        }
+        margin-top:8px;
       }
+      // .ic-selected {
+      //   display: block;
+      //   float: right;
+      //   font-size: 24px;
+      //   line-height: 42px;
+      //   color: #fff;
+      //   &:before {
+      //     content: '\E69E';
+      //   }
+      //   &.on {
+      //     color: #ea6f5a !important;
+      //   }
+      //   &.off:before {
+      //     border: 1px solid #d5d5d5;
+      //     border-radius: 50%;
+      //   }
+      // }
     }
     .alipay {
       .pay-icon {
         color: #039ae3;
+      }
+    }
+    .wechat {
+      .pay-icon {
+        color: #22ab39;
       }
     }
   }
@@ -90,4 +104,46 @@ button {
   -webkit-tap-highlight-color: transparent;
   text-transform: none;
   overflow: visible;
+}
+//单选按钮美化
+.design-radio {
+  position: relative;
+  line-height: 30px;
+  display: inline-block;
+  input[type='radio'] {
+    width: 20px;
+    height: 20px;
+    opacity: 0;
+  }
+
+  label {
+    position: absolute;
+    left: 5px;
+    top: 3px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #999;
+    　　　　　　　cursor: pointer;
+  }
+
+  /*设置选中的input的样式*/
+  /* + 是兄弟选择器,获取选中后的label元素*/
+  input:checked + label {
+    background-color: #fe6d32;
+    border: 1px solid #fe6d32;
+  }
+  /*添加的加号与label进行拼接(一个矩形边框去掉上和左的边框),再旋转45度*/
+  input:checked + label::after {
+    position: absolute;
+    content: '';
+    width: 5px;
+    height: 10px;
+    top: 3px;
+    left: 6px;
+    border: 2px solid #fff;
+    border-top: none;
+    border-left: none;
+    transform: rotate(45deg);
+  }
 }
