--- a/src/assets/css/components/ArticleDirectory.scss
+++ b/src/assets/css/components/ArticleDirectory.scss
@@ -74,7 +74,7 @@
     top: 0px;
     height: 100%;
     width: 70%;
-    //right: 0px;
+    right: 0px;
     //display: none;
   }
   .changeHidden {
