--- a/src/assets/css/components/Recommend.scss
+++ b/src/assets/css/components/Recommend.scss
@@ -23,6 +23,9 @@
       display: block;
       overflow: hidden;
       margin-top: 12px;
+      &:last-child {
+        margin-bottom: 12px;
+      }
       .stats-comp {
         font-size: 0;
         .recommend-img {
