--- a/src/assets/css/components/ArticleBody.scss
+++ b/src/assets/css/components/ArticleBody.scss
@@ -400,8 +400,17 @@
   position: relative;
   background-color: #f5f5f5;
   border-color: #e5e5e5;
+  //有上一章和下一章
   .half {
     width: 50%;
+  }
+  //只有上一章或下一章
+  .all{
+    width:100%;
+  }
+  //没有
+  .none{
+    display:none!important;
   }
   .chapter-item {
     display: inline-block;
