--- a/src/assets/css/components/ArticleBody.scss
+++ b/src/assets/css/components/ArticleBody.scss
@@ -544,6 +544,8 @@ button {
   .app-open {
     margin: 0;
     color: #b1b1b1 !important;
+    display: inline-block;
+    padding-left: 0;
     i {
       font-size: 14px;
       vertical-align: middle;
