--- a/src/assets/css/components/ArticleBody.scss
+++ b/src/assets/css/components/ArticleBody.scss
@@ -155,6 +155,16 @@
       color: hsla(0, 0%, 59%, 0.4);
       position: relative;
       line-height: 40px;
+      margin-top: 20px;
+      &:before {
+        content: '';
+        display: block;
+        width: 40px;
+        height: 1px;
+        background-color: #ddd;
+        left: 0;
+        top: 0;
+      }
     }
   }
   .collapse-tips {
