--- a/src/assets/css/components/ArticleDirectory.scss
+++ b/src/assets/css/components/ArticleDirectory.scss
@@ -1,5 +1,9 @@
 /* ArticleDirectory */
 .book-nav {
+  //此处两行应该是全局继承，但是目前修改其它地方会受影响，只做局部处理
+  font-weight: 400;
+  line-height: 1.6;
+
   padding-left: 18px;
   padding-right: 18px;
   vertical-align: middle;
