--- a/src/assets/css/components/ArticleBody.scss
+++ b/src/assets/css/components/ArticleBody.scss
@@ -201,6 +201,7 @@
         color: #c7254e;
         background-color: #f6f6f6;
         display: inline-block;
+        line-height: 1;
       }
       code,
       kbd,
